2007-03-05  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Loic Minier <lool+gnome@via.ecp.fr>

	* Makefile.am: add GNOMECC_LIBS to linker args. Closes bug #413468.

2007-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-wm-manager.c: (wm_load): Call gnome_desktop_item_new_from_file
	with the right arguments. Closes bug #382039.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-window-manager.c: (gnome_window_manager_class_init):
	Remove some unused code.

2005-07-19  Mark McLoughlin  <mark@skynet.ie>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html

	* wm-exec.c, wm-list.c, wm-properties.h: remove old crufty
	code.
	
	* Makefile.am: update.

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-wm-manager.c: s/gboolean/guint/ in single bitfield to
	quiet warnings from sparse.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

Mon Jun 21 17:41:23 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-window-manager.c (gnome_wm_settings_copy|free): add copy
	and free functions for the WM settings.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-16  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* Makefile.am: Added libgnome_window_settings_la_LIBADD to get complete
	inter-library dependency information into the library.