@@ -1,3 +1,9 @@
+2007-08-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* metacity-window-manager.c: (metacity_change_settings),
+	(metacity_get_settings), (metacity_get_double_click_actions):
+	expose missing metacity double-click actions. Closes bug #416541.
+
 2007-03-05  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Loic Minier <lool+gnome@via.ecp.fr>
